--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "f8a82655-402e-4b69-a188-2e53c1f140c3"
 authors = ["Alessio Parato"]
 version = "1.0.0-DEV"
 
+[deps]
+FilePaths = "8fc22ac5-c921-52a6-82fd-178b2807b824"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
+
 [compat]
 julia = "1"
 
